--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#设置项目路径
+#\u914D\u7F6E\u9879\u76EE\u8BBF\u95EE\u8DEF\u5F84
 server.servlet.context-path=/SpringBootDemo
-#配置国际化配置文件
-spring.messages.basename=globalization.login
+#\u914D\u7F6E\u56FD\u9645\u5316\u6587\u4EF6
+spring.messages.basename=i18n.login
