--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@
 server.servlet.context-path=/SpringBootDemo
 #\u914D\u7F6E\u56FD\u9645\u5316\u6587\u4EF6
 spring.messages.basename=i18n.login
+#\u7981\u7528\u9875\u9762\u7F13\u5B58
+spring.thymeleaf.cache=false 
