--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ server.servlet.context-path=/SpringBootDemo
 spring.messages.basename=i18n.login
 #\u7981\u7528\u9875\u9762\u7F13\u5B58
 spring.thymeleaf.cache=false 
+#\u65F6\u95F4\u683C\u5F0F\u5316
+spring.mvc.date-format=yyyy-MM-dd HH:mm:ss
