--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+#\u914D\u7F6E\u7AEF\u53E3
+server.port=8088
+#\u8BBE\u7F6E\u8BF7\u6C42\u7F16\u7801\u683C\u5F0F
+server.tomcat.uri-encoding=UTF-8
 #\u914D\u7F6E\u9879\u76EE\u8BBF\u95EE\u8DEF\u5F84
 server.servlet.context-path=/SpringBootDemo
 #\u914D\u7F6E\u56FD\u9645\u5316\u6587\u4EF6
